--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- 	<!DOCTYPE html>
+ 		<!DOCTYPE html>
  	<html lang="pt-br">
  	<head>
  	<meta charset="UTF-8">
@@ -7,6 +7,7 @@
  	<body>
  	<h1> Site para teste do GIT </h1>
  	<p>Tudo isso foi digitado no Bloco de Notas.</p>
-	<p>texto digitado após o primeiro commit.</p>
+ 	<p> Texto digitado após o primeiro commit.</p>
+ 	<p> Texto digitado no dia seguinte.</p>
  	</body>
  	</html>
